-Add quantity to Furniture model

--- a/views/furniture.pug
+++ b/views/furniture.pug
@@ -8,6 +8,7 @@ block content
       li
         h2 #{furniture.name}
         p Category: #{furniture.category}
+        p Quantity: #{furniture.quantity}
         ul
           each material in furniture.materials
             li
