--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1 Craftsman Showcase
-  a(href='/furniture') View Furniture
-  a(href='/materials') View Materials
+  .card
+    h2 Vitrine
+
